src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WS
    WITH
    EXCEPT
    EXEC
    DEL
    BINARYNUMBER
    TRY
    RAWSTRING
    INUMBER
    LAMBDA
    RAISE
    HEXADECIMALNUMBER
    OCTALNUMBER
    YIELD
    FINALLY
    AT
    UNICODESTRING
    FROM

Grammar

Rule 0     S' -> file_input
Rule 1     file_input -> single_stmt ENDMARKER
Rule 2     single_stmt -> single_stmt NEWLINE
Rule 3     single_stmt -> single_stmt stmt
Rule 4     single_stmt -> <empty>
Rule 5     funcdef -> DEF NAME parameters COLON suite
Rule 6     parameters -> LPAREN varargslist RPAREN
Rule 7     varargslist -> <empty>
Rule 8     varargslist -> fpdef EQUAL test fpdeflist COMMA
Rule 9     varargslist -> fpdef EQUAL test fpdeflist
Rule 10    varargslist -> fpdef fpdeflist COMMA
Rule 11    varargslist -> fpdef fpdeflist
Rule 12    fpdeflist -> <empty>
Rule 13    fpdeflist -> fpdeflist COMMA fpdef
Rule 14    fpdeflist -> fpdeflist COMMA fpdef EQUAL test
Rule 15    fpdef -> NAME
Rule 16    fpdef -> LPAREN fplist RPAREN
Rule 17    fplist -> fpdef fplist1 COMMA
Rule 18    fplist -> fpdef fplist1
Rule 19    fplist1 -> <empty>
Rule 20    fplist1 -> fplist1 COMMA fpdef
Rule 21    stmt -> simple_stmt
Rule 22    stmt -> compound_stmt
Rule 23    simple_stmt -> small_stmts NEWLINE
Rule 24    simple_stmt -> small_stmts SEMI NEWLINE
Rule 25    small_stmts -> small_stmts SEMI small_stmt
Rule 26    small_stmts -> small_stmt
Rule 27    small_stmt -> flow_stmt
Rule 28    small_stmt -> expr_stmt
Rule 29    small_stmt -> print_stmt
Rule 30    small_stmt -> pass_stmt
Rule 31    small_stmt -> import_stmt
Rule 32    small_stmt -> global_stmt
Rule 33    small_stmt -> assert_stmt
Rule 34    expr_stmt -> testlist augassign testlist
Rule 35    expr_stmt -> testlist eqtestlist
Rule 36    eqtestlist -> <empty>
Rule 37    eqtestlist -> eqtestlist EQUAL testlist
Rule 38    augassign -> PLUSEQUAL
Rule 39    augassign -> MINEQUAL
Rule 40    augassign -> STAREQUAL
Rule 41    augassign -> SLASHEQUAL
Rule 42    augassign -> PERCENTEQUAL
Rule 43    augassign -> STARSTAREQUAL
Rule 44    augassign -> SLASHSLASHEQUAL
Rule 45    print_stmt -> PRINT
Rule 46    print_stmt -> PRINT testlist
Rule 47    pass_stmt -> PASS
Rule 48    flow_stmt -> break_stmt
Rule 49    flow_stmt -> continue_stmt
Rule 50    flow_stmt -> return_stmt
Rule 51    break_stmt -> BREAK
Rule 52    continue_stmt -> CONTINUE
Rule 53    return_stmt -> RETURN
Rule 54    return_stmt -> RETURN testlist
Rule 55    import_stmt -> IMPORT NAME
Rule 56    import_stmt -> IMPORT NAME AS NAME
Rule 57    global_stmt -> GLOBAL NAME namelist
Rule 58    namelist -> <empty>
Rule 59    namelist -> COMMA NAME namelist
Rule 60    assert_stmt -> ASSERT testlist
Rule 61    compound_stmt -> if_stmt
Rule 62    compound_stmt -> for_stmt
Rule 63    compound_stmt -> while_stmt
Rule 64    compound_stmt -> funcdef
Rule 65    compound_stmt -> classdef
Rule 66    if_stmt -> IF test COLON suite elif_list
Rule 67    if_stmt -> IF test COLON suite elif_list ELSE COLON suite
Rule 68    elif_list -> <empty>
Rule 69    elif_list -> ELIF test COLON suite elif_list
Rule 70    while_stmt -> WHILE test COLON suite
Rule 71    while_stmt -> WHILE test COLON suite ELSE COLON suite
Rule 72    for_stmt -> FOR exprlist IN testlist COLON suite
Rule 73    for_stmt -> FOR exprlist IN testlist COLON suite ELSE COLON suite
Rule 74    suite -> simple_stmt
Rule 75    suite -> NEWLINE INDENT stmts DEDENT
Rule 76    test -> or_test
Rule 77    test -> or_test IF or_test ELSE test
Rule 78    or_test -> and_test ortestlist
Rule 79    ortestlist -> <empty>
Rule 80    ortestlist -> OR and_test ortestlist
Rule 81    and_test -> not_test andtestlist
Rule 82    andtestlist -> <empty>
Rule 83    andtestlist -> AND not_test andtestlist
Rule 84    not_test -> NOT not_test
Rule 85    not_test -> comparison
Rule 86    comparison -> expr compexprlist
Rule 87    compexprlist -> <empty>
Rule 88    compexprlist -> comp_op expr compexprlist
Rule 89    comp_op -> LESS
Rule 90    comp_op -> GREATER
Rule 91    comp_op -> EQEQUAL
Rule 92    comp_op -> GREATEREQUAL
Rule 93    comp_op -> LESSEQUAL
Rule 94    comp_op -> NOTEQUAL
Rule 95    comp_op -> IN
Rule 96    comp_op -> NOT IN
Rule 97    comp_op -> IS
Rule 98    comp_op -> IS NOT
Rule 99    expr -> xor_expr xorexprlist
Rule 100   xorexprlist -> <empty>
Rule 101   xorexprlist -> VBAR xor_expr xorexprlist
Rule 102   xor_expr -> and_expr andexprlist
Rule 103   andexprlist -> <empty>
Rule 104   andexprlist -> CIRCUMFLEX and_expr andexprlist
Rule 105   and_expr -> shift_expr shiftexprlist
Rule 106   shiftexprlist -> <empty>
Rule 107   shiftexprlist -> AMPER shift_expr shiftexprlist
Rule 108   shift_expr -> arith_expr arithexprlist
Rule 109   arithexprlist -> <empty>
Rule 110   arithexprlist -> LEFTSHIFT arith_expr arithexprlist
Rule 111   arithexprlist -> RIGHTSHIFT arith_expr arithexprlist
Rule 112   arith_expr -> term termlist
Rule 113   termlist -> <empty>
Rule 114   termlist -> PLUS term termlist
Rule 115   termlist -> MINUS term termlist
Rule 116   term -> factor factorlist
Rule 117   factorlist -> <empty>
Rule 118   factorlist -> STAR factor factorlist
Rule 119   factorlist -> SLASH factor factorlist
Rule 120   factorlist -> PERCENT factor factorlist
Rule 121   factorlist -> SLASHSLASH factor factorlist
Rule 122   factor -> power
Rule 123   factor -> PLUS factor
Rule 124   factor -> MINUS factor
Rule 125   factor -> TILDE factor
Rule 126   power -> atom trailerlist
Rule 127   power -> atom trailerlist STARSTAR factor
Rule 128   trailerlist -> <empty>
Rule 129   trailerlist -> trailer trailerlist
Rule 130   atom -> LPAREN RPAREN
Rule 131   atom -> LPAREN testlist_comp RPAREN
Rule 132   atom -> LSQB RSQB
Rule 133   atom -> LSQB listmaker RSQB
Rule 134   atom -> LBRACE RBRACE
Rule 135   atom -> LBRACE dictorsetmaker RBRACE
Rule 136   atom -> BACKQUOTE testlist1 BACKQUOTE
Rule 137   atom -> NAME
Rule 138   atom -> NUMBER
Rule 139   atom -> FNUMBER
Rule 140   atom -> stringlist
Rule 141   stringlist -> STRING
Rule 142   stringlist -> STRING stringlist
Rule 143   stringlist -> TRIPLESTRING
Rule 144   stringlist -> TRIPLESTRING stringlist
Rule 145   listmaker -> testlist
Rule 146   testlist_comp -> testlist
Rule 147   trailer -> LPAREN RPAREN
Rule 148   trailer -> LPAREN arglist RPAREN
Rule 149   trailer -> LSQB subscriptlist RSQB
Rule 150   trailer -> DOT NAME
Rule 151   subscriptlist -> subscript
Rule 152   subscriptlist -> subscript COMMA
Rule 153   subscriptlist -> subscript COMMA subscriptlist
Rule 154   subscript -> DOT DOT DOT
Rule 155   subscript -> test
Rule 156   subscript -> test COLON test sliceop
Rule 157   subscript -> COLON test sliceop
Rule 158   subscript -> test COLON sliceop
Rule 159   subscript -> test COLON test
Rule 160   subscript -> test COLON
Rule 161   subscript -> COLON test
Rule 162   subscript -> COLON sliceop
Rule 163   subscript -> COLON
Rule 164   sliceop -> COLON
Rule 165   sliceop -> COLON test
Rule 166   exprlist -> expr
Rule 167   exprlist -> expr COMMA
Rule 168   exprlist -> expr COMMA exprlist
Rule 169   testlist -> test
Rule 170   testlist -> test COMMA
Rule 171   testlist -> test COMMA testlist
Rule 172   dictorsetmaker -> testcolonlist
Rule 173   dictorsetmaker -> testlist
Rule 174   testcolonlist -> test COLON test
Rule 175   testcolonlist -> test COLON test COMMA
Rule 176   testcolonlist -> test COLON test COMMA testcolonlist
Rule 177   classdef -> CLASS NAME COLON suite
Rule 178   classdef -> CLASS NAME LPAREN RPAREN COLON suite
Rule 179   classdef -> CLASS NAME LPAREN testlist RPAREN COLON suite
Rule 180   arglist -> argument
Rule 181   arglist -> argument COMMA
Rule 182   arglist -> argument COMMA arglist
Rule 183   argument -> test
Rule 184   argument -> test EQUAL test
Rule 185   testlist1 -> test
Rule 186   testlist1 -> test COMMA testlist1
Rule 187   stmts -> stmts stmt
Rule 188   stmts -> stmt

Terminals, with rules where they appear

AMPER                : 107
AND                  : 83
AS                   : 56
ASSERT               : 60
AT                   : 
BACKQUOTE            : 136 136
BINARYNUMBER         : 
BREAK                : 51
CIRCUMFLEX           : 104
CLASS                : 177 178 179
COLON                : 5 66 67 67 69 70 71 71 72 73 73 156 157 158 159 160 161 162 163 164 165 174 175 176 177 178 179
COMMA                : 8 10 13 14 17 20 59 152 153 167 168 170 171 175 176 181 182 186
CONTINUE             : 52
DEDENT               : 75
DEF                  : 5
DEL                  : 
DOT                  : 150 154 154 154
ELIF                 : 69
ELSE                 : 67 71 73 77
ENDMARKER            : 1
EQEQUAL              : 91
EQUAL                : 8 9 14 37 184
EXCEPT               : 
EXEC                 : 
FINALLY              : 
FNUMBER              : 139
FOR                  : 72 73
FROM                 : 
GLOBAL               : 57
GREATER              : 90
GREATEREQUAL         : 92
HEXADECIMALNUMBER    : 
IF                   : 66 67 77
IMPORT               : 55 56
IN                   : 72 73 95 96
INDENT               : 75
INUMBER              : 
IS                   : 97 98
LAMBDA               : 
LBRACE               : 134 135
LEFTSHIFT            : 110
LESS                 : 89
LESSEQUAL            : 93
LPAREN               : 6 16 130 131 147 148 178 179
LSQB                 : 132 133 149
MINEQUAL             : 39
MINUS                : 115 124
NAME                 : 5 15 55 56 56 57 59 137 150 177 178 179
NEWLINE              : 2 23 24 75
NOT                  : 84 96 98
NOTEQUAL             : 94
NUMBER               : 138
OCTALNUMBER          : 
OR                   : 80
PASS                 : 47
PERCENT              : 120
PERCENTEQUAL         : 42
PLUS                 : 114 123
PLUSEQUAL            : 38
PRINT                : 45 46
RAISE                : 
RAWSTRING            : 
RBRACE               : 134 135
RETURN               : 53 54
RIGHTSHIFT           : 111
RPAREN               : 6 16 130 131 147 148 178 179
RSQB                 : 132 133 149
SEMI                 : 24 25
SLASH                : 119
SLASHEQUAL           : 41
SLASHSLASH           : 121
SLASHSLASHEQUAL      : 44
STAR                 : 118
STAREQUAL            : 40
STARSTAR             : 127
STARSTAREQUAL        : 43
STRING               : 141 142
TILDE                : 125
TRIPLESTRING         : 143 144
TRY                  : 
UNICODESTRING        : 
VBAR                 : 101
WHILE                : 70 71
WITH                 : 
WS                   : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

and_expr             : 102 104
and_test             : 78 80
andexprlist          : 102 104
andtestlist          : 81 83
arglist              : 148 182
argument             : 180 181 182
arith_expr           : 108 110 111
arithexprlist        : 108 110 111
assert_stmt          : 33
atom                 : 126 127
augassign            : 34
break_stmt           : 48
classdef             : 65
comp_op              : 88
comparison           : 85
compexprlist         : 86 88
compound_stmt        : 22
continue_stmt        : 49
dictorsetmaker       : 135
elif_list            : 66 67 69
eqtestlist           : 35 37
expr                 : 86 88 166 167 168
expr_stmt            : 28
exprlist             : 72 73 168
factor               : 116 118 119 120 121 123 124 125 127
factorlist           : 116 118 119 120 121
file_input           : 0
flow_stmt            : 27
for_stmt             : 62
fpdef                : 8 9 10 11 13 14 17 18 20
fpdeflist            : 8 9 10 11 13 14
fplist               : 16
fplist1              : 17 18 20
funcdef              : 64
global_stmt          : 32
if_stmt              : 61
import_stmt          : 31
listmaker            : 133
namelist             : 57 59
not_test             : 81 83 84
or_test              : 76 77 77
ortestlist           : 78 80
parameters           : 5
pass_stmt            : 30
power                : 122
print_stmt           : 29
return_stmt          : 50
shift_expr           : 105 107
shiftexprlist        : 105 107
simple_stmt          : 21 74
single_stmt          : 1 2 3
sliceop              : 156 157 158 162
small_stmt           : 25 26
small_stmts          : 23 24 25
stmt                 : 3 187 188
stmts                : 75 187
stringlist           : 140 142 144
subscript            : 151 152 153
subscriptlist        : 149 153
suite                : 5 66 67 67 69 70 71 71 72 73 73 177 178 179
term                 : 112 114 115
termlist             : 112 114 115
test                 : 8 9 14 66 67 69 70 71 77 155 156 156 157 158 159 159 160 161 165 169 170 171 174 174 175 175 176 176 183 184 184 185 186
testcolonlist        : 172 176
testlist             : 34 34 35 37 46 54 60 72 73 145 146 171 173 179
testlist1            : 136 186
testlist_comp        : 131
trailer              : 129
trailerlist          : 126 127 129
varargslist          : 6
while_stmt           : 63
xor_expr             : 99 101
xorexprlist          : 99 101

Parsing method: LALR

state 0

    (0) S' -> . file_input
    (1) file_input -> . single_stmt ENDMARKER
    (2) single_stmt -> . single_stmt NEWLINE
    (3) single_stmt -> . single_stmt stmt
    (4) single_stmt -> .

    ENDMARKER       reduce using rule 4 (single_stmt -> .)
    NEWLINE         reduce using rule 4 (single_stmt -> .)
    IF              reduce using rule 4 (single_stmt -> .)
    FOR             reduce using rule 4 (single_stmt -> .)
    WHILE           reduce using rule 4 (single_stmt -> .)
    DEF             reduce using rule 4 (single_stmt -> .)
    CLASS           reduce using rule 4 (single_stmt -> .)
    PRINT           reduce using rule 4 (single_stmt -> .)
    PASS            reduce using rule 4 (single_stmt -> .)
    IMPORT          reduce using rule 4 (single_stmt -> .)
    GLOBAL          reduce using rule 4 (single_stmt -> .)
    ASSERT          reduce using rule 4 (single_stmt -> .)
    BREAK           reduce using rule 4 (single_stmt -> .)
    CONTINUE        reduce using rule 4 (single_stmt -> .)
    RETURN          reduce using rule 4 (single_stmt -> .)
    NOT             reduce using rule 4 (single_stmt -> .)
    PLUS            reduce using rule 4 (single_stmt -> .)
    MINUS           reduce using rule 4 (single_stmt -> .)
    TILDE           reduce using rule 4 (single_stmt -> .)
    LPAREN          reduce using rule 4 (single_stmt -> .)
    LSQB            reduce using rule 4 (single_stmt -> .)
    LBRACE          reduce using rule 4 (single_stmt -> .)
    BACKQUOTE       reduce using rule 4 (single_stmt -> .)
    NAME            reduce using rule 4 (single_stmt -> .)
    NUMBER          reduce using rule 4 (single_stmt -> .)
    FNUMBER         reduce using rule 4 (single_stmt -> .)
    STRING          reduce using rule 4 (single_stmt -> .)
    TRIPLESTRING    reduce using rule 4 (single_stmt -> .)

    file_input                     shift and go to state 1
    single_stmt                    shift and go to state 2

state 1

    (0) S' -> file_input .



state 2

    (1) file_input -> single_stmt . ENDMARKER
    (2) single_stmt -> single_stmt . NEWLINE
    (3) single_stmt -> single_stmt . stmt
    (21) stmt -> . simple_stmt
    (22) stmt -> . compound_stmt
    (23) simple_stmt -> . small_stmts NEWLINE
    (24) simple_stmt -> . small_stmts SEMI NEWLINE
    (61) compound_stmt -> . if_stmt
    (62) compound_stmt -> . for_stmt
    (63) compound_stmt -> . while_stmt
    (64) compound_stmt -> . funcdef
    (65) compound_stmt -> . classdef
    (25) small_stmts -> . small_stmts SEMI small_stmt
    (26) small_stmts -> . small_stmt
    (66) if_stmt -> . IF test COLON suite elif_list
    (67) if_stmt -> . IF test COLON suite elif_list ELSE COLON suite
    (72) for_stmt -> . FOR exprlist IN testlist COLON suite
    (73) for_stmt -> . FOR exprlist IN testlist COLON suite ELSE COLON suite
    (70) while_stmt -> . WHILE test COLON suite
    (71) while_stmt -> . WHILE test COLON suite ELSE COLON suite
    (5) funcdef -> . DEF NAME parameters COLON suite
    (177) classdef -> . CLASS NAME COLON suite
    (178) classdef -> . CLASS NAME LPAREN RPAREN COLON suite
    (179) classdef -> . CLASS NAME LPAREN testlist RPAREN COLON suite
    (27) small_stmt -> . flow_stmt
    (28) small_stmt -> . expr_stmt
    (29) small_stmt -> . print_stmt
    (30) small_stmt -> . pass_stmt
    (31) small_stmt -> . import_stmt
    (32) small_stmt -> . global_stmt
    (33) small_stmt -> . assert_stmt
    (48) flow_stmt -> . break_stmt
    (49) flow_stmt -> . continue_stmt
    (50) flow_stmt -> . return_stmt
    (34) expr_stmt -> . testlist augassign testlist
    (35) expr_stmt -> . testlist eqtestlist
    (45) print_stmt -> . PRINT
    (46) print_stmt -> . PRINT testlist
    (47) pass_stmt -> . PASS
    (55) import_stmt -> . IMPORT NAME
    (56) import_stmt -> . IMPORT NAME AS NAME
    (57) global_stmt -> . GLOBAL NAME namelist
    (60) assert_stmt -> . ASSERT testlist
    (51) break_stmt -> . BREAK
    (52) continue_stmt -> . CONTINUE
    (53) return_stmt -> . RETURN
    (54) return_stmt -> . RETURN testlist
    (169) testlist -> . test
    (170) testlist -> . test COMMA
    (171) testlist -> . test COMMA testlist
    (76) test -> . or_test
    (77) test -> . or_test IF or_test ELSE test
    (78) or_test -> . and_test ortestlist
    (81) and_test -> . not_test andtestlist
    (84) not_test -> . NOT not_test
    (85) not_test -> . comparison
    (86) comparison -> . expr compexprlist
    (99) expr -> . xor_expr xorexprlist
    (102) xor_expr -> . and_expr andexprlist
    (105) and_expr -> . shift_expr shiftexprlist
    (108) shift_expr -> . arith_expr arithexprlist
    (112) arith_expr -> . term termlist
    (116) term -> . factor factorlist
    (122) factor -> . power
    (123) factor -> . PLUS factor
    (124) factor -> . MINUS factor
    (125) factor -> . TILDE factor
    (126) power -> . atom trailerlist
    (127) power -> . atom trailerlist STARSTAR factor
    (130) atom -> . LPAREN RPAREN
    (131) atom -> . LPAREN testlist_comp RPAREN
    (132) atom -> . LSQB RSQB
    (133) atom -> . LSQB listmaker RSQB
    (134) atom -> . LBRACE RBRACE
    (135) atom -> . LBRACE dictorsetmaker RBRACE
    (136) atom -> . BACKQUOTE testlist1 BACKQUOTE
    (137) atom -> . NAME
    (138) atom -> . NUMBER
    (139) atom -> . FNUMBER
    (140) atom -> . stringlist
    (141) stringlist -> . STRING
    (142) stringlist -> . STRING stringlist
    (143) stringlist -> . TRIPLESTRING
    (144) stringlist -> . TRIPLESTRING stringlist

    ENDMARKER       shift and go to state 3
    NEWLINE         shift and go to state 7
    IF              shift and go to state 65
    FOR             shift and go to state 27
    WHILE           shift and go to state 43
    DEF             shift and go to state 25
    CLASS           shift and go to state 61
    PRINT           shift and go to state 24
    PASS            shift and go to state 18
    IMPORT          shift and go to state 10
    GLOBAL          shift and go to state 42
    ASSERT          shift and go to state 57
    BREAK           shift and go to state 55
    CONTINUE        shift and go to state 39
    RETURN          shift and go to state 23
    NOT             shift and go to state 40
    PLUS            shift and go to state 8
    MINUS           shift and go to state 6
    TILDE           shift and go to state 47
    LPAREN          shift and go to state 64
    LSQB            shift and go to state 51
    LBRACE          shift and go to state 36
    BACKQUOTE       shift and go to state 5
    NAME            shift and go to state 53
    NUMBER          shift and go to state 56
    FNUMBER         shift and go to state 52
    STRING          shift and go to state 62
    TRIPLESTRING    shift and go to state 31

    small_stmt                     shift and go to state 4
    arith_expr                     shift and go to state 38
    return_stmt                    shift and go to state 44
    not_test                       shift and go to state 58
    stringlist                     shift and go to state 29
    flow_stmt                      shift and go to state 26
    expr_stmt                      shift and go to state 19
    atom                           shift and go to state 49
    continue_stmt                  shift and go to state 46
    shift_expr                     shift and go to state 28
    print_stmt                     shift and go to state 48
    factor                         shift and go to state 9
    test                           shift and go to state 16
    compound_stmt                  shift and go to state 30
    and_expr                       shift and go to state 11
    break_stmt                     shift and go to state 59
    power                          shift and go to state 32
    simple_stmt                    shift and go to state 12
    testlist                       shift and go to state 13
    classdef                       shift and go to state 14
    stmt                           shift and go to state 33
    assert_stmt                    shift and go to state 15
    for_stmt                       shift and go to state 17
    and_test                       shift and go to state 63
    global_stmt                    shift and go to state 60
    funcdef                        shift and go to state 50
    import_stmt                    shift and go to state 34
    pass_stmt                      shift and go to state 37
    comparison                     shift and go to state 35
    term                           shift and go to state 20
    if_stmt                        shift and go to state 21
    xor_expr                       shift and go to state 45
    expr                           shift and go to state 54
    or_test                        shift and go to state 22
    while_stmt                     shift and go to state 66
    small_stmts                    shift and go to state 41

state 3

    (1) file_input -> single_stmt ENDMARKER .

    $end            reduce using rule 1 (file_input -> single_stmt ENDMARKER .)


state 4

    (26) small_stmts -> small_stmt .

    NEWLINE         reduce using rule 26 (small_stmts -> small_stmt .)
    SEMI            reduce using rule 26 (small_stmts -> small_stmt .)


state 5

    (136) atom -> BACKQUOTE . testlist1 BACKQUOTE
    (185) testlist1 -> . test
    (186) testlist1 -> . test COMMA testlist1
    (76) test -> . or_test
    (77) test -> . or_test IF or_test ELSE test
    (78) or_test -> . and_test ortestlist
    (81) and_test -> . not_test andtestlist
    (84) not_test -> . NOT not_test
    (85) not_test -> . comparison
    (86) comparison -> . expr compexprlist
    (99) expr -> . xor_expr xorexprlist
    (102) xor_expr -> . and_expr andexprlist
    (105) and_expr -> . shift_expr shiftexprlist
    (108) shift_expr -> . arith_expr arithexprlist
    (112) arith_expr -> . term termlist
    (116) term -> . factor factorlist
    (122) factor -> . power
    (123) factor -> . PLUS factor
    (124) factor -> . MINUS factor
    (125) factor -> . TILDE factor
    (126) power -> . atom trailerlist
    (127) power -> . atom trailerlist STARSTAR factor
    (130) atom -> . LPAREN RPAREN
    (131) atom -> . LPAREN testlist_comp RPAREN
    (132) atom -> . LSQB RSQB
    (133) atom -> . LSQB listmaker RSQB
    (134) atom -> . LBRACE RBRACE
    (135) atom -> . LBRACE dictorsetmaker RBRACE
    (136) atom -> . BACKQUOTE testlist1 BACKQUOTE
    (137) atom -> . NAME
    (138) atom -> . NUMBER
    (139) atom -> . FNUMBER
    (140) atom -> . stringlist
    (141) stringlist -> . STRING
    (142) stringlist -> . STRING stringlist
    (143) stringlist -> . TRIPLESTRING
    (144) stringlist -> . TRIPLESTRING stringlist

    NOT             shift and go to state 40
    PLUS            shift and go to state 8
    MINUS           shift and go to state 6
    TILDE           shift and go to state 47
    LPAREN          shift and go to state 64
    LSQB            shift and go to state 51
    LBRACE          shift and go to state 36
    BACKQUOTE       shift and go to state 5
    NAME            shift and go to state 53
    NUMBER          shift and go to state 56
    FNUMBER         shift and go to state 52
    STRING          shift and go to state 62
    TRIPLESTRING    shift and go to state 31

    atom                           shift and go to state 49
    not_test                       shift and go to state 58
    stringlist                     shift and go to state 29
    shift_expr                     shift and go to state 28
    factor                         shift and go to state 9
    testlist1                      shift and go to state 67
    and_expr                       shift and go to state 11
    power                          shift and go to state 32
    and_test                       shift and go to state 63
    test                           shift and go to state 68
    xor_expr                       shift and go to state 45
    comparison                     shift and go to state 35
    term                           shift and go to state 20
    arith_expr                     shift and go to state 38
    expr                           shift and go to state 54
    or_test                        shift and go to state 22

state 6

    (124) factor -> MINUS . factor
    (122) factor -> . power
    (123) factor -> . PLUS factor
    (124) factor -> . MINUS factor
    (125) factor -> . TILDE factor
    (126) power -> . atom trailerlist
    (127) power -> . atom trailerlist STARSTAR factor
    (130) atom -> . LPAREN RPAREN
    (131) atom -> . LPAREN testlist_comp RPAREN
    (132) atom -> . LSQB RSQB
    (133) atom -> . LSQB listmaker RSQB
    (134) atom -> . LBRACE RBRACE
    (135) atom -> . LBRACE dictorsetmaker RBRACE
    (136) atom -> . BACKQUOTE testlist1 BACKQUOTE
    (137) atom -> . NAME
    (138) atom -> . NUMBER
    (139) atom -> . FNUMBER
    (140) atom -> . stringlist
    (141) stringlist -> . STRING
    (142) stringlist -> . STRING stringlist
    (143) stringlist -> . TRIPLESTRING
    (144) stringlist -> . TRIPLESTRING stringlist

    PLUS            shift and go to state 8
    MINUS           shift and go to state 6
    TILDE           shift and go to state 47
    LPAREN          shift and go to state 64
    LSQB            shift and go to state 51
    LBRACE          shift and go to state 36
    BACKQUOTE       shift and go to state 5
    NAME            shift and go to state 53
    NUMBER          shift and go to state 56
    FNUMBER         shift and go to state 52
    STRING          shift and go to state 62
    TRIPLESTRING    shift and go to state 31

    factor                         shift and go to state 69
    power                          shift and go to state 32
    atom                           shift and go to state 49
    stringlist                     shift and go to state 29

state 7

    (2) single_stmt -> single_stmt NEWLINE .

    ENDMARKER       reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NEWLINE         reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    IF              reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    FOR             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    WHILE           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    DEF             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    CLASS           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PRINT           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PASS            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    IMPORT          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    GLOBAL          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    ASSERT          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    BREAK           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    CONTINUE        reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    RETURN          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NOT             reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    PLUS            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    MINUS           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    TILDE           reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LPAREN          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LSQB            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    LBRACE          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    BACKQUOTE       reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NAME            reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    NUMBER          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    FNUMBER         reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    STRING          reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)
    TRIPLESTRING    reduce using rule 2 (single_stmt -> single_stmt NEWLINE .)


state 8

    (123) factor -> PLUS . factor
    (122) factor -> . power
    (123) factor -> . PLUS factor
    (124) factor -> . MINUS factor
    (125) factor -> . TILDE factor
    (126) power -> . atom trailerlist
    (127) power -> . atom trailerlist STARSTAR factor
    (130) atom -> . LPAREN RPAREN
    (131) atom -> . LPAREN testlist_comp RPAREN
    (132) atom -> . LSQB RSQB
    (133) atom -> . LSQB listmaker RSQB
    (134) atom -> . LBRACE RBRACE
    (135) atom -> . LBRACE dictorsetmaker RBRACE
    (136) atom -> . BACKQUOTE testlist1 BACKQUOTE
    (137) atom -> . NAME
    (138) atom -> . NUMBER
    (139) atom -> . FNUMBER
    (140) atom -> . stringlist
    (141) stringlist -> . STRING
    (142) stringlist -> . STRING stringlist
    (143) stringlist -> . TRIPLESTRING
    (144) stringlist -> . TRIPLESTRING stringlist

    PLUS            shift and go to state 8
    MINUS           shift and go to state 6
    TILDE           shift and go to state 47
    LPAREN          shift and go to state 64
    LSQB            shift and go to state 51
    LBRACE          shift and go to state 36
    BACKQUOTE       shift and go to state 5
    NAME            shift and go to state 53
    NUMBER          shift and go to state 56
    FNUMBER         shift and go to state 52
    STRING          shift and go to state 62
    TRIPLESTRING    shift and go to state 31

    factor                         shift and go to state 70
    power                          shift and go to state 32
    atom                           shift and go to state 49
    stringlist                     shift and go to state 29

state 9

    (116) term -> factor . factorlist
    (117) factorlist -> .
    (118) factorlist -> . STAR factor factorlist
    (119) factorlist -> . SLASH factor factorlist
    (120) factorlist -> . PERCENT factor factorlist
    (121) factorlist -> . SLASHSLASH factor factorlist
